--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<p>Test form</p>
 	<form>
 		<label>
-			Username
+			Username (name="username")
 		</label>
 		<input type="text" name="username">
 	</form>
