added password and email field

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
 	<p>Test form</p>
 	<form>
 		<label>
-			Username (name="username")
+			Username
 		</label>
 		<input type="text" name="username">
+		<label>
+			Password
+		</label>
+		<input type="Password" name="username">
+		<label>
+			Email
+		</label>
+		<input type="email" name="username">
+		<input type="submit" value="Submit">
+
 	</form>
 </body>
 </html>
