added password and email field fix

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<label>
 			Password
 		</label>
-		<input type="Password" name="username">
+		<input type="Password" id="Password">
 		<label>
 			Email
 		</label>
-		<input type="email" name="username">
+		<input type="email" id="email">
 		<input type="submit" value="Submit">
 
 	</form>
