--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 			Username
 		</label>
 		<input type="text" name="username">
+		<br>
 		<label>
 			Password
 		</label>
-		<input type="Password" id="Password">
+		<input type="Password" id="password">
+		<br>
 		<label>
 			Email
 		</label>
 		<input type="email" id="email">
+		<br>
 		<input type="submit" value="Submit">
 
 	</form>
