Added select check box and radio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
 		<input type="email" id="email">
 		<br>
 		<input type="submit" value="Submit">
-
+		<br>
+		<label>
+			Select
+		</label>
+		<select>
+			<option value="volvo">Volvo</option>
+			<option value="saab">Saab</option>
+			<option value="mercedes">Mercedes</option>
+			<option value="audi">Audi</option>
+		</select> 
+		<br>
+		<label>
+			Checkbox
+		</label>
+		<input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
+		<input type="checkbox" name="vehicle2" value="Car"> I have a car<br>
+		<input type="checkbox" name="vehicle3" value="Boat" checked> I have a boat<br> 
+		<br>
+		<label>
+			Radio
+		</label>
+		<input type="radio" name="gender" value="male"> Male<br>
+		<input type="radio" name="gender" value="female"> Female<br>
+		<input type="radio" name="gender" value="other"> Other 
 	</form>
 </body>
 </html>
