Add gender and terms

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 		</select> 
 		<br>
 		<label>
+			Gender
+		</label>
+		<select>
+			<option value="">Select</option>
+			<option value="male">Male</option>
+			<option value="femail">Female</option>
+		</select> 
+		<br>
+		<label>
 			Checkbox
 		</label>
 		<input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
@@ -45,6 +54,25 @@
 		<input type="radio" name="gender" value="male"> Male<br>
 		<input type="radio" name="gender" value="female"> Female<br>
 		<input type="radio" name="gender" value="other"> Other 
+		<br>
+		<select id="day">
+			<option value="01">1</option>
+			<option value="02">2</option>
+			<option value="03">3</option>
+			<option value="04">4</option>
+			<option value="05">5</option>
+		</select> 
+		<select id="birth-month">
+			<option value="1">jan</option>
+			<option value="2">feb</option>
+			<option value="3">mar</option>
+			<option value="3">apr</option>
+			<option value="3">may</option>
+		</select>
+		<br>
+		<input type="checkbox" name="terms" value="accept"> I accept terms and conditions<br>
+		<br>
+
 	</form>
 </body>
 </html>
