--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
 	<p>Test form</p>
 	<form>
 		<label>
+			data-test="username"
+		</label>
+		<input type="text" data-test="username">
+		<br><br>
+		<label>
+			data-testid="username"
+		</label>
+		<input type="text" data-testid="username">
+		<br><br>
+		<label>
+			type="email"
+		</label>
+		<input type="email">
+		<br><br>
+		<label>
+			type="password"
+		</label>
+		<input type="password">
+		<br><br>
+		<label>
+			placeholder="username"
+		</label>
+		<input placeholder="username">
+		<br><br>
+		<label>
 			Username
 		</label>
 		<input type="text" name="username">
