--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<p>Test form</p>
 	<form>
 		<label>
+			id="username"
+		</label>
+		<input type="text" id="username">
+		<br><br>
+		<label>
+			id="USERNAME"
+		</label>
+		<input type="text" id="USERNAME">
+		<br><br>
+		<label>
 			data-test="username"
 		</label>
 		<input type="text" data-test="username">
