--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		<input type="text" id="USERNAME">
 		<br><br>
 		<label>
+			name="lastName"
+		</label>
+		<input type="text" name="lastName">
+		<br><br>
+		<label>
 			data-test="username"
 		</label>
 		<input type="text" data-test="username">
