--- a/index.html
+++ b/index.html
@@ -5,11 +5,79 @@
 <body>
 	<p>Test form</p>
 	<form>
-		<label>
-			id="birth-day"
-		</label>
-		<select placeholder="Day" id="birth-day"><option value="" disabled="">Day</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option><option value="21">21</option><option value="22">22</option><option value="23">23</option><option value="24">24</option><option value="25">25</option><option value="26">26</option><option value="27">27</option><option value="28">28</option><option value="29">29</option><option value="30">30</option><option value="31">31</option></select>
-		<input type="reset" value="Reset form"> 
+		<fieldset>
+			<legend>Date of birth</legend>
+			
+			<label>Birthday</label>
+			<select id="birth-day">
+				<option value="" disabled="">Day</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="12">12</option>
+				<option value="13">13</option>
+				<option value="14">14</option>
+				<option value="15">15</option>
+				<option value="16">16</option>
+				<option value="17">17</option>
+				<option value="18">18</option>
+				<option value="19">19</option>
+				<option value="20">20</option>
+				<option value="21">21</option>
+				<option value="22">22</option>
+				<option value="23">23</option>
+				<option value="24">24</option>
+				<option value="25">25</option>
+				<option value="26">26</option>
+				<option value="27">27</option>
+				<option value="28">28</option>
+				<option value="29">29</option>
+				<option value="30">30</option>
+				<option value="31">31</option>
+			</select>
+			<br>
+			<label>Birth month</label>
+			<select id="birth-month">
+				<option value="" disabled="">Month with numbers 1 - 12</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="12">12</option>
+			</select>
+			<select id="birth-month">
+				<option value="" disabled="">Month with letters jan - dec</option>
+				<option value="jan">1</option>
+				<option value="feb">2</option>
+				<option value="mar">3</option>
+				<option value="apr">4</option>
+				<option value="may">5</option>
+				<option value="jun">6</option>
+				<option value="jul">7</option>
+				<option value="aug">8</option>
+				<option value="sep">9</option>
+				<option value="oct">10</option>
+				<option value="nov">11</option>
+				<option value="dec">12</option>
+			</select>
+		</fieldset>
+
+
 		<br><br>
 		<label>
 			id="username"
