--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 				<option value="nov">11</option>
 				<option value="dec">12</option>
 			</select>
+			<br>
+			<label>As input type date</label>
+			<input id="date-of-birth" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
 		</fieldset>
 		<br>
 
