--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<!-- Date of birth -->		
 		<fieldset>
-			<legend>Date of birth with numbers 1 - 31</legend>
+			<legend>Date of birth</legend>
 			<label>Birthday</label>
 			<select id="birth-day">
 				<option value="" disabled="">Day</option>
