--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<input type="radio" id="other" name="gender" value="other">
 					<label for="other">Other</label>
 					<br>
-					<div>Gender from Facebook signup</div>
+					<p>Gender from Facebook signup</p>
 
 					<span data-type="radio" data-name="gender_wrapper">
 						<span>
@@ -193,7 +193,7 @@
 					<input id="date-of-birth" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
 					<br>
 					<label>As input type text</label>
-					<input id="date-of-birth" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
+					<input id="date-of-birth" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy">
 				</fieldset>
 			</div>
 
