--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					</select>
 					<br>
 					<label>Month with numbers 1 - 12</label>
-					<select id="birth-month">
+					<select id="birth-month1">
 						<option value="" disabled="">Month</option>
 						<option value="1">1</option>
 						<option value="2">2</option>
@@ -156,7 +156,7 @@
 					</select>
 					<br>
 					<label>Month with numbers 01 - 12</label>
-					<select id="birth-month">
+					<select id="birth-month2">
 						<option value="" disabled="">Month</option>
 						<option value="01">1</option>
 						<option value="02">2</option>
@@ -173,7 +173,7 @@
 					</select>
 					<br>
 					<label>Month with letters jan - dec</label>
-					<select id="birth-month">
+					<select id="birth-month3">
 						<option value="" disabled="">Month</option>
 						<option value="jan">1</option>
 						<option value="feb">2</option>
@@ -190,10 +190,10 @@
 					</select>
 					<br>
 					<label>As input type date</label>
-					<input id="date-of-birth" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
+					<input id="date-of-birth1" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
 					<br>
 					<label>As input type text</label>
-					<input id="date-of-birth" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy">
+					<input id="date-of-birth2" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy">
 				</fieldset>
 			</div>
 
