changes to form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<fieldset>
 					<legend>Gender</legend>
 					<label>Select male/female</label>
-					<select id="gender">
+					<select id="gender" name="sex">
 						<option disabled selected>Please select</option>
 						<option value="male">Male</option>
 						<option value="female">Female</option>
@@ -238,11 +238,6 @@
 					<br>
 					<label>Username 2</label>
 					<input type="text" id="userName">
-					<label>Username 3</label>
-					<input type="text" name="userName">
-					<br>
-					<label>Username 4</label>
-					<input type="text" name="userName">
 				</fieldset>
 			</div>
 		</div> 
