changes to form

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
 					<br>
 					<label>As input type text</label>
 					<input id="date-of-birth2" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy">
+					<label>Age</label>
+					<input type="text" name="age">
 				</fieldset>
 			</div>
 
