changes to form

--- a/index.html
+++ b/index.html
@@ -190,12 +190,13 @@
 					</select>
 					<br>
 					<label>As input type date</label>
-					<input id="date-of-birth1" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy">
+					<input id="date-of-birth1" type="date" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="dd/mm/yyyy" size="10">
 					<br>
 					<label>As input type text</label>
-					<input id="date-of-birth2" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy">
+					<input id="date-of-birth2" type="text" min="1900-01-01" max="2020-02-23" name="dateOfBirth" placeholder="mm/dd/yyyy" size="10">
+					<br>
 					<label>Age</label>
-					<input type="text" name="age">
+					<input type="text" name="age" size="10">
 				</fieldset>
 			</div>
 
