--- a/index.html
+++ b/index.html
@@ -210,10 +210,12 @@
 					<label>Select</label>
 					<br>
 					<select>
+						<option value="please select" disabled selected>Please select</option>
 						<option value="volvo">Volvo</option>
 						<option value="saab">Saab</option>
 						<option value="mercedes">Mercedes</option>
 						<option value="audi">Audi</option>
+
 					</select> 
 					<br><br>	
 
