add change to state and country fields

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 						<option value="WI">Wisconsin</option>
 						<option value="WY">Wyoming</option>
 					</select>	
-					<label>Country ISO-3166-1: Alpha-2 Codes</label>
+					<br>
+					<label>Country ISO-3166-1: Alpha-2 Codes</label>'
+					<br>
 					<select>
 						<option value="AF">Afghanistan</option>
 						<option value="AX">Åland Islands</option>
@@ -352,8 +354,10 @@
 						<option value="YE">Yemen</option>
 						<option value="ZM">Zambia</option>
 						<option value="ZW">Zimbabwe</option>
+					<br>
 					</select>
 					<label>Country ISO-3166-1: Alpha-3 Codes</label>
+					<br>
 					<select>
 						<option value="AFG">Afghanistan</option>
 						<option value="ALA">Åland Islands</option>
