add change to state and country fields

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<fieldset>
 					<legend>Addresse information</legend>
 					<label>State</label>
-					<select>
+					<select id="state">
 						<option value="AL">Alabama</option>
 						<option value="AK">Alaska</option>
 						<option value="AZ">Arizona</option>
@@ -102,9 +102,9 @@
 						<option value="WY">Wyoming</option>
 					</select>	
 					<br>
-					<label>Country ISO-3166-1: Alpha-2 Codes</label>'
+					<label>Country ISO-3166-1: Alpha-2 Codes</label>
 					<br>
-					<select>
+					<select id="country" style="max-width: 250px;">
 						<option value="AF">Afghanistan</option>
 						<option value="AX">Åland Islands</option>
 						<option value="AL">Albania</option>
@@ -358,7 +358,7 @@
 					</select>
 					<label>Country ISO-3166-1: Alpha-3 Codes</label>
 					<br>
-					<select>
+					<select id="country_2" style="max-width: 250px;">
 						<option value="AFG">Afghanistan</option>
 						<option value="ALA">Åland Islands</option>
 						<option value="ALB">Albania</option>
