add country and text

--- a/index.html
+++ b/index.html
@@ -555,6 +555,9 @@
 						<option value="ZWE">Zimbabwe</option>
 					</select>
 					<br>
+					<label>Country as text</label>
+					<input type="text" name="country">
+					<br>					
 					<label>State</label>
 					<select id="state">
 						<option value="AL">Alabama</option>
