add state as text

--- a/index.html
+++ b/index.html
@@ -613,6 +613,8 @@
 						<option value="WY">Wyoming</option>
 					</select>	
 					<br>
+					<label>State as text</label>
+					<input type="text" name="state">
 					<label>ZIP Code</label>
 					<input type="number" id="zip">
 					<br>
