Add gender from GMX

--- a/index.html
+++ b/index.html
@@ -686,6 +686,23 @@
 							<label for="u_0_b">Custom</label>
 						</span>
 					</span>
+					<!--Gender from GMX-->
+					<div class="l-flex l-horizontal a-mb-space-1">
+						<onereg-radio-wrapper class="ng-touched ng-dirty ng-valid">
+							<pos-input-radio class="pos-input-radio" data-test="gender-radio-group" name="salutation">
+								<label class="pos-input-radio__label">
+									<input class="pos-input-radio__input" type="radio" name="salutation" value="FEMALE">
+									<i class="pos-input-radio__border"><span class="pos-input-radio__checker"></span></i>
+									<span class="pos-input-radio__labeltext">Ms</span>
+								</label>
+							</pos-input-radio>
+						</onereg-radio-wrapper>
+						<onereg-radio-wrapper class="ng-touched ng-dirty ng-valid">
+							<pos-input-radio class="pos-input-radio" data-test="gender-radio-group" name="salutation"><label class="pos-input-radio__label"><input class="pos-input-radio__input" type="radio" name="salutation" value="MALE"><i class="pos-input-radio__border"><span class="pos-input-radio__checker"></span></i><span class="pos-input-radio__labeltext">Mr</span></label></pos-input-radio>
+						</onereg-radio-wrapper>
+					</div>
+
+
 				</fieldset> 
 
 				<!-- Date of birth -->
