add attributes to username

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<fieldset>
 					<legend>Account details</legend>
 					<label>Username</label>
-					<input type="text" id="userName">
+					<input type="text" id="userName" placeholder="username" data-test="username" name="user">
 					<br>
 					<label>Email</label>
 					<input type="email">
