--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 				<fieldset>
 					<legend>Account details</legend>
 					<label>Username</label>
+					<input type="email" id="signup_credentials_mail" name="signup[credentials][mail]" required="required" class="form-control">
+					<label>Username</label>
 					<input type="text" id="r84611-434866-43644-25734" placeholder="username" name="user">
 					<br>
 					<label>Email</label>
